# nestedtext-py-test

./: .gitignore  README.md  pyproject.toml
conf/: addressbook.nt
nestedtext_py_test/: __main__.py
